# ros-2-personal-learning

./: .gitignore  README.md  useful_commands.md
ros2_ws/: notes-1-17-2026.md  notes-1-19-2026.md  notes-1-26-2026.md  notes-1-27-2026.md
ros2_ws/.devcontainer/: devcontainer.json
ros2_ws/src/basic_robot_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/basic_robot_control/basic_robot_control/: joint_reader.py  simulated_wheel_hardware.py  wheel_pose_listener.py
ros2_ws/src/basic_robot_control/config/: ros_gz_bridge.yaml
ros2_ws/src/basic_robot_control/launch/: read_joints.launch.py  spawn_vehicle.launch.py
ros2_ws/src/basic_robot_control/sdf/: building_robot.sdf  moving_robot.sdf  (+1 more)
ros2_ws/src/layered_control_systems/: package.xml  setup.cfg  setup.py
ros2_ws/src/layered_control_systems/launch/: arm.launch.py  vehicle.launch.py
ros2_ws/src/layered_control_systems/layered_control_systems/: arm_controller.py  arm_hardware_simulator.py  critically_damped_controller.py  drivetrain_controller.py  drivetrain_hardware_simulator.py  mocap_simulator.py  publish_random_arm_target_positions.py  publish_random_target_positions.py  vehicle_manager.py
ros2_ws/src/layered_control_systems/srv/: ApplySimAccel.srv
ros2_ws/src/multiagent_payload_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_robot_sim/: directory_map.txt  next_steps.md  package.xml  setup.py
ros2_ws/src/smart_lab_phase1/: package.xml  setup.cfg  setup.py
ros2_ws/src/smart_lab_phase2/: package.xml  setup.cfg  setup.py
ros2_ws/src/smart_lab_phase3/: package.xml  setup.cfg  setup.py
(+17 files in other folders)
